# imane

./: .firebaserc  .gitignore  APP_STORE_SUBMISSION_CHECKLIST.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEVICE_TESTING_GUIDE.md  ENVIRONMENT_SETUP.md  FIREBASE_SETUP.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_SUMMARY.md  PRIVACY_POLICY.md  PRODUCTION_FIREBASE_SETUP.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  RELEASE_PLAN.md  REQUIREMENTS.md  SECURITY_CHECKLIST.md  TERMS_OF_SERVICE.md  UI_DESIGN_SPEC.md
backend/: .env.example  .env.production.example  .firebaserc  .gcloudignore  .gitignore  Dockerfile  NOTIFICATION_TEST.md  QUICK_TEST_GUIDE.md  README.md  SIMULATOR_TEST_GUIDE.md  TTL_SETUP.md  check_schedules.py  check_user_fcm.py  debug_list_users.py  firestore.indexes.json  firestore.indexes.json.exported  firestore.rules  pyproject.toml  storage.cors.json  storage.rules  test_notification_delivery.py  test_notification_simple.sh
backend/app/: config.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/core/: firebase.py
backend/app/schemas/: __init__.py  auth.py  common.py  favorite.py  friend.py  location.py  notification.py  (+4 more)
backend/functions/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json
backend/scripts/: run-dev.sh  run-prod.sh
backend/tests/: INTEGRATION_TEST_README.md  conftest.py  test_auto_notification.py  test_batch_processing.py  test_friends_api.py  test_geofencing.py  test_location_tracking_integration.py  test_pops_integration.py
functions/: .gitignore  README.md  deploy.sh  main.py  pyproject.toml
(+122 files in other folders)
