[project]
name = "bubble-backend"
version = "1.0.0"
description = "BUBBLE - Backend API Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "email-validator==2.1.0",
    # Firebase
    "firebase-admin==6.4.0",
    # 認証・セキュリティ
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "cryptography==42.0.0",
    # 位置情報処理
    "geopy==2.4.1",
    "pygeohash==1.2.0",
    # HTTPクライアント
    "httpx==0.26.0",
    # その他
    "python-dateutil==2.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "ruff>=0.1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
