[project]
name = "imane-functions"
version = "0.1.0"
description = "Cloud Functions for imane - automatic pop deletion"
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=6.2.0",
    "firebase-functions>=0.4.1",
    "google-cloud-firestore>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
